--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -11,6 +11,7 @@
         "iste",
         "itaque",
         "Iusto",
+        "Kode",
         "magnam",
         "maiores",
         "obcaecati",
